appId: com.weatherapp
---
- launchApp
- assertVisible: "Cities"
- assertVisible:
    id: "weather_icon_city_0"
- assertVisible:
    id: "city_name_city_0"
- assertVisible:
    id: "description_city_0"
- assertVisible:
    id: "temperature_city_0"
- tapOn:
    id: "city_0"
- assertVisible:
    id: "label_city_0"
    index: 0
- assertVisible:
    id: "value_unit_city_0"
    index: 0
- assertVisible:
    id: "label_city_0"
    index: 1
- assertVisible:
    id: "value_unit_city_0"
    index: 1
- assertVisible:
    id: "label_city_0"
    index: 2
- assertVisible:
    id: "value_unit_city_0"
    index: 2
- assertVisible:
    id: "label_city_0"
    index: 3
- assertVisible:
    id: "value_unit_city_0"
    index: 3
- assertVisible:
    id: "weather_icon_city_0"
- assertVisible:
    id: "city_name_city_0"
- assertVisible:
    id: "description_city_0"
- assertVisible:
    id: "temperature_city_0"
- assertVisible: "Weather details"
- assertVisible: "Cities"
- tapOn: "Cities"
